--- a/documentation/html_prototype/add-animal.html
+++ b/documentation/html_prototype/add-animal.html
@@ -136,6 +136,9 @@
               <textarea id="textarea-input" class="form-control" placeholder="Animal History"></textarea>
             </div>
             <div class="d-grid col-6 mx-auto">
+              <button type="reset" class="btn btn-secondary">Cancel</button>
+            </div>
+            <div class="d-grid col-6 mx-auto">
               <button type="submit" class="btn btn-success">Save</button>
             </div>
           </form>
