--- a/documentation/html_prototype/edit-shelter.html
+++ b/documentation/html_prototype/edit-shelter.html
@@ -92,6 +92,9 @@
               <input type="url" class="form-control" placeholder="https://example.com" required value='https://dreamlandadventures.com'>
             </div>
             <div class="d-grid col-6 mx-auto">
+              <button type="reset" class="btn btn-secondary">Cancel</button>
+            </div>
+            <div class="d-grid col-6 mx-auto">
               <button type="submit" class="btn btn-success">Save</button>
             </div>
           </form>
